--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run Christmas Tree Script
       run: |
-        python ./tests_/common_/runners_/htmlRunners_/regressionRunner.py
+        python /tests_/common_/runners_/htmlRunners_/regressionRunner.py
 
     - name: Upload HTML Report
       uses: actions/upload-artifact@v3
