--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
-        
-    - name: Set PYTHONPATH
-      run: |
-        echo "PYTHONPATH=${{github.workspace}}" >> $GITHUB_ENV
 
     - name: Run Christmas Tree Script
       run: |
+        export PYTHONPATH=${{github.workspace}}
         python ./tests_/common_/runners_/htmlRunners_/regressionRunner.py
 
     - name: Upload HTML Report
