--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r ./requirements.txt
-    
-    - name: Set PYTHONPATH
-      run: |
-        echo "PYTHONPATH=${{github.workspace}}" >> $GITHUB_ENV
-
-    - name: Debug Environment
-      run: |
-        echo "PYTHONPATH: $PYTHONPATH"
-        ls -R ${{github.workspace}}
         
     - name: Run Christmas Tree Script
+      env:
+        PYTHONPATH: ${{github.workspace}}
       run: |
         python ./tests_/common_/runners_/htmlRunners_/regressionRunner.py
 
